[project]
name = "pytorch-deepfloorplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask~=3.1",
    "flask-wtf~=1.2",
    "matplotlib~=3.10",
    "numpy~=2.1",
    "opencv-python~=4.11",
    "pandas~=2.2",
    "requests~=2.32",
    "scikit-image~=0.25",
    "scipy~=1.15",
    "tensorflow~=2.19",
    "torch~=2.6",
    "torchvision~=0.21",
    "tqdm~=4.67",
]
